完成1.新增策略所有代码自动化；2. 完成简单的Echarts并行坐标展示，但是异步数据加载出错，需要找候立菲请教。下一步计算，1.调用addtion_tools自动化填充json文件，并异步加载至前端展示，2.与李睿师兄分析各个算法表现性，讨论各个算法适应场景 3. 回复swarm集群的使用

--- a/viz/index.html
+++ b/viz/index.html
@@ -8,5 +8,6 @@
   <h1>VM Migration Based on MBBO</h1>
   <p><b>DOM Version</b>: visualization powered by DOM modification. <a href="ver-dom.html">watch this!</a> (no longer maintained) </p>
   <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="ver-pixi.js.html">watch this!</a></p>
-</body>
+  <h1>The contrast of addtional container_scheduler strategies based on heuristics</h1>
+  <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="addtion-ver-pixi.js.html">watch this!</a></p>
 </html>
