--- a/viz/index.html
+++ b/viz/index.html
@@ -8,6 +8,6 @@
   <h1>VM Migration Based on MBBO</h1>
   <p><b>DOM Version</b>: visualization powered by DOM modification. <a href="ver-dom.html">watch this!</a> (no longer maintained) </p>
   <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="ver-pixi.js.html">watch this!</a></p>
-  <h1>The contrast of addtional container_scheduler strategies based on heuristics</h1>
-  <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="addtion-ver-pixi.js.html">watch this!</a></p>
+  <h1>The contrast of Docker Orchestrator scheduler strategies for addtionnal phase based on heuristics</h1>
+  <p><b>Parallel Axis</b>: visualization powered by echarts.baidu.com <a href="show-addtion-contrast.html">watch this!</a></p>
 </html>
