Contrast前端展示图没有问题，但是批量比较除了问题，complex算法单独比较优于simple，但是批量时确实其2倍，估计代码哪里有问题

--- a/viz/index.html
+++ b/viz/index.html
@@ -9,5 +9,6 @@
   <p><b>DOM Version</b>: visualization powered by DOM modification. <a href="ver-dom.html">watch this!</a> (no longer maintained) </p>
   <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="ver-pixi.js.html">watch this!</a></p>
   <h1>The contrast of Docker Orchestrator scheduler strategies for addtionnal phase based on heuristics</h1>
-  <p><b>Parallel Axis</b>: visualization powered by echarts.baidu.com <a href="show-addtion-contrast.html">watch this!</a></p>
+  <p><b>Parallel Axis</b>:Docker+VM+HM based the contrast of heuristcs strategies. <a href="addtional-functions-contrast.html">watch this!</a></p>
+  <p><b>Line Axis</b>:the contrast of containers addtion phase based on Docker+VM+HM and Docker+VM seperatedly.<a href="arch-addtion-contrast.html">watch this!</a></p>
 </html>
